compiler/testData/diagnostics/tests/script/innerClassWarning.ll.kts
// LL_FIR_DIVERGENCE
// KT-62841
// LL_FIR_DIVERGENCE
// TARGET_BACKEND: JVM_IR
// !LANGUAGE: -ProhibitScriptTopLevelInnerClasses

<!WRONG_MODIFIER_CONTAINING_DECLARATION!>inner<!> class A
